layout/xul/nsMenuPopupFrame.cpp
@@ -322,6 +322,7 @@ nsresult nsMenuPopupFrame::CreateWidgetForView(nsView* aView) {
   nsWidgetInitData widgetData;
   widgetData.mWindowType = eWindowType_popup;
   widgetData.mBorderStyle = eBorderStyle_default;
+  widgetData.mForMenupopupFrame = true;
   widgetData.clipSiblings = true;
   widgetData.mPopupHint = mPopupType;
   widgetData.mNoAutoHide = IsNoAutoHide();
